--- a/BL/BL.csproj
+++ b/BL/BL.csproj
@@ -5,4 +5,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DAL\DAL.csproj" />
+    <ProjectReference Include="..\Models\MODELS.csproj" />
+  </ItemGroup>
+
 </Project>
