--- a/BL/BL.csproj
+++ b/BL/BL.csproj
@@ -6,7 +6,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\DAL\DAL.csproj" />
+    <ProjectReference Include="..\Infrastruture\INFRASTRUTUE.csproj" />
     <ProjectReference Include="..\Models\MODELS.csproj" />
   </ItemGroup>
 
